syntax = "proto3";
option java_multiple_files = true;
package com.netgrif.pluginlibrary.core;

service PluginRegistrationService {
  rpc register(RegistrationRequest) returns (RegistrationResponse);
  rpc unregister(UnregistrationRequest) returns (UnregistrationResponse);
  rpc deactivate(DeactivationRequest) returns (DeactivationResponse);
}

message RegistrationRequest {
  bytes plugin = 1;
}

message UnregistrationRequest {
  string identifier = 1;
}

message DeactivationRequest {
  string identifier = 1;
}

message RegistrationResponse {
  string message = 1;
}

message UnregistrationResponse {
  string message = 1;
}

message DeactivationResponse {
  string message = 1;
}

